Fixed comments, javadoc etc
git-svn-id: https://alma-svn.aoc.nrao.edu/p2/trunk/ACS@109600 523d945c-050c-4681-91ec-863ad3bb968a